--- a/restaurant_menu/templates/home.html
+++ b/restaurant_menu/templates/home.html
@@ -10,8 +10,13 @@
         <h2>{{ meal.1 }}</h2>
         {% for row in Order_list %}
             {% if  row.meal_type == meal.0 %}
-                <h3>{{ row.meal }}</h3>
-                <p>{{ row.description }}</p>
+                {%if row.status == 0 %}
+                    <h3><del>{{ row.meal }}</del></h3>
+                    <p>{{ row.description }}</p>
+                {% else %}
+                    <h3>{{ row.meal }}</h3>
+                    <p>{{ row.description }}</p>
+                {% endif %}
             {% endif %}
         {% endfor %}
     {% endfor %}
